[package]
name = "ethabi-cli"
version = "12.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
keywords = ["ethereum", "eth", "abi", "solidity", "cli"]
description = "Easy to use cli for conversion of ethereum contract calls to bytecode."
homepage = "https://github.com/paritytech/ethabi"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
ethabi = { version = "12.0.0", path = "../ethabi" }
hex = "0.4"
sha3 = "0.9"
structopt = "0.3"
itertools = "0.8"

[[bin]]
name = "ethabi"
path = "src/main.rs"
